<resources>
    <string name="app_name">LS Palm Attendance</string>
    <string name="select_school">Select School</string>
    <string name="no_internet">No Internet</string>
    <string name="permission_title"><![CDATA[Camera Permissions needed]]></string>
    <string name="permission_info"><![CDATA[This app requires camera access to function properly.\n\nPlease grant camera permissions.]]></string>
    <string name="permission_info_denied"><![CDATA[To use this app, camera access is required.\n\nPlease enable it in Settings.]]></string>
    <string name="go_to_settings">Go To Settings</string>
    <string name="okay">Okay</string>
    <string name="login_info">Please enter login credentials</string>
    <string name="username">Username</string>
    <string name="passcode">Passcode</string>
    <string name="lokate_info">This app is part of the Lokate Student ecosystem \n Email: lokatestudent@dunamisworld.com \n WhatsApp: +971-50-748-2052</string>
    <string name="exit_dialog_title">Exit</string>
    <string name="exit_dialog_message">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout_dialog_title">Logout</string>
    <string name="logout_dialog_message">Are you sure you want to log out?</string>
    <string name="select_mode_for_scanning_title">Select Mode for Scanning</string>
    <string name="select_mode_for_scanning_desc">Select a mode based on whether you are entering or exiting.</string>
    <string name="entry">Entry</string>
    <string name="or">Or</string>
    <string name="exit">Exit</string>
    <string name="app_name_desc">Use the palm recognition feature to securely mark attendance.</string>
    <string name="start_palm_recognition">Start Palm Recognition</string>
    <string name="tap_here_to_download_db">TAP HERE TO DOWNLOAD DB</string>
    <string name="db_download_partial">Database download incomplete. Please try again later.</string>
    <string name="go_back_title">Go Back</string>
    <string name="go_back_message">Are you sure you want to go back?</string>
    <string name="device_connected">Device Connected</string>
    <string name="device_disconnected">Device Disconnected</string>
    <string name="tap_here_to_connect">TAP HERE TO CONNECT</string>
    <string name="connection_stable">CONNECTION STABLE</string>
    <string name="automatic_time_zone_disabled">AUTOMATIC TIME ZONE DISABLED</string>
    <string name="automatic_time_zone_disabled_info">Please enable the following settings and then continue:</string>
    <string name="automatic_time_zone_disabled_info_two">1) Automatic Date &amp; Time\n2) Automatic Time Zone</string>
    <string name="open_settings">Open Settings</string>
    <string name="not_recognized">NOT RECOGNIZED</string>
    <string name="initializing">Initializing…</string>
    <string name="please_wait">Please Wait.</string>
    <string name="palm_detection_device_info">Please connect the palm detection device to continue.</string>
    <string name="scanning_palm">SCANNING PALM</string>
    <string name="scanning_palm_info">Please hold your palm open &amp; steady about 10–15 cm (4–6 inches) away from the device.</string>
    <string name="dismiss">Dismiss</string>
    <string name="unable_goback_info">You cannot go back while pending items remain, Please wait until the pending count reaches zero.</string>
    <string name="info">Info</string>
    <string name="back_gesture_info">Back gesture &amp; Start Palm Recognition will remain disabled until the download is complete.</string>
</resources>