<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:background="@drawable/bg_white_brick"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:id="@+id/llBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_semi_bold"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/lokate_student"
            app:shapeAppearance="@style/CornerRadius_10" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/tvVersion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llBack">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="40dp"
                    android:src="@drawable/lokate_student"
                    app:shapeAppearance="@style/CornerRadius_10" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/login_info"
                    android:textColor="@color/blue"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/etUsername"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/rectangle_white_background"
                        android:fontFamily="@font/montserrat_regular"
                        android:hint="@string/username"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/dark_gray" />

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/rectangle_white_background"
                        android:fontFamily="@font/montserrat_regular"
                        android:hint="@string/passcode"
                        android:inputType="numberPassword"
                        android:lines="1"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/dark_gray"
                        android:windowSoftInputMode="stateAlwaysVisible" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/btnSubmit"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/arrow_login"
                        app:shapeAppearance="@style/CornerRadius_20" />
                </LinearLayout>

                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/lokatestudent_straight_logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/theme_orange"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:text="@string/lokate_info"
                android:textColor="@color/blue"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:textColor="@color/dark_gray"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>